Insert hero image in index.html
Added a hero image with appropriate attributes.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,15 @@
           <div class="trustCard">
             <div class="trustTitle">Consistent</div>
             <div class="trustText">Repeatable systems that stick.</div>
-          </div>
+          </div> <div class="heroImageWrap">
+  <img
+    src="assets/01_hero_cozy_doodle.jpg"
+    alt="Cozy mixed-breed dog resting calmly at home"
+    class="heroImage"
+    loading="eager"
+  />
+</div>
+
         </div>
       </div>
 
