Change hero image format from jpg to jpeg

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="trustText">Repeatable systems that stick.</div>
           </div> <div class="heroImageWrap">
   <img
-    src="assets/01_hero_cozy_doodle.jpg"
+    src="assets/01_hero_cozy_doodle.jpeg"
     alt="Cozy mixed-breed dog resting calmly at home"
     class="heroImage"
     loading="eager"
