Update index.html: change hero image path to assets/01_hero_cozy_doodle.jpg

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="trustText">Repeatable systems that stick.</div>
           </div> <div class="heroImageWrap">
   <img
-    src="assets/01_hero_cozy_doodle.jpeg"
+    src="assets/01_hero_cozy_doodle.jpg"
     alt="Cozy mixed-breed dog resting calmly at home"
     class="heroImage"
     loading="eager"
@@ -386,517 +386,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-:root{
-  --bg: #0b0f16;
-  --panel: rgba(255,255,255,0.06);
-  --panel2: rgba(255,255,255,0.08);
-  --text: rgba(255,255,255,0.92);
-  --muted: rgba(255,255,255,0.70);
-  --faint: rgba(255,255,255,0.55);
-  --stroke: rgba(255,255,255,0.12);
-  --accent: #7cddc0;
-  --accent2:#7aa9ff;
-  --shadow: 0 18px 60px rgba(0,0,0,0.45);
-  --radius: 18px;
-  --radius2: 24px;
-  --max: 1120px;
-  --font: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-}
-
-*{ box-sizing:border-box; }
-html,body{ margin:0; padding:0; font-family: var(--font); background: radial-gradient(1200px 600px at 20% -10%, rgba(124,221,192,0.25), transparent 55%),
-radial-gradient(900px 600px at 100% 10%, rgba(122,169,255,0.18), transparent 55%),
-var(--bg);
-color: var(--text);
-scroll-behavior:smooth;
-}
-
-a{ color: inherit; text-decoration: none; }
-code{ background: rgba(255,255,255,0.08); padding: 2px 6px; border-radius: 8px; border: 1px solid rgba(255,255,255,0.10); }
-
-.container{
-  width: min(100% - 32px, var(--max));
-  margin: 0 auto;
-}
-
-.topbar{
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  gap: 14px;
-  padding: 10px 16px;
-  background: rgba(255,255,255,0.04);
-  border-bottom: 1px solid var(--stroke);
-  position: sticky;
-  top: 0;
-  z-index: 50;
-  backdrop-filter: blur(10px);
-}
-
-.linkbtn{
-  background: transparent;
-  border: 0;
-  color: var(--accent);
-  cursor:pointer;
-  font-weight: 650;
-}
-
-.nav{
-  width: min(100% - 32px, var(--max));
-  margin: 14px auto 0;
-  padding: 14px 16px;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  border: 1px solid var(--stroke);
-  border-radius: var(--radius2);
-  background: rgba(255,255,255,0.04);
-  backdrop-filter: blur(14px);
-}
-
-.brand{ display:flex; align-items:center; gap: 12px; }
-.logo{
-  width: 42px; height: 42px;
-  border-radius: 14px;
-  display:grid; place-items:center;
-  background: rgba(124,221,192,0.14);
-  border: 1px solid rgba(124,221,192,0.18);
-}
-.brandName{ font-weight: 800; letter-spacing: 0.2px; }
-.brandTag{ font-size: 13px; color: var(--muted); margin-top: 2px; }
-
-.navlinks{ display:flex; gap: 18px; align-items:center; }
-.navlinks a{ color: var(--muted); font-weight: 650; font-size: 14px; }
-.navlinks a:hover{ color: var(--text); }
-.pill{
-  padding: 10px 14px;
-  border-radius: 999px;
-  border: 1px solid rgba(124,221,192,0.24);
-  background: rgba(124,221,192,0.10);
-  color: var(--text) !important;
-}
-
-.menuBtn{
-  display:none;
-  background: transparent;
-  border: 1px solid var(--stroke);
-  color: var(--text);
-  border-radius: 12px;
-  padding: 10px 12px;
-  cursor:pointer;
-}
-
-.mobileMenu{
-  display:none;
-  width: min(100% - 32px, var(--max));
-  margin: 10px auto 0;
-  border: 1px solid var(--stroke);
-  border-radius: var(--radius2);
-  background: rgba(255,255,255,0.04);
-  backdrop-filter: blur(14px);
-  padding: 14px 16px;
-}
-.mobileMenu a{ display:block; padding: 10px 0; color: var(--muted); font-weight: 650; }
-.mobileMenu a:hover{ color: var(--text); }
-.mobileMenu .linkbtn{ padding: 10px 0; text-align:left; }
-
-.hero{
-  padding: 54px 0 28px;
-}
-.heroInner{
-  width: min(100% - 32px, var(--max));
-  margin: 0 auto;
-  display:grid;
-  grid-template-columns: 1.2fr 0.8fr;
-  gap: 26px;
-  align-items:center;
-}
-.heroCopy h1{
-  font-size: clamp(34px, 4vw, 54px);
-  line-height: 1.05;
-  margin: 0 0 14px;
-  letter-spacing: -0.6px;
-}
-.heroCopy p{ color: var(--muted); font-size: 16.5px; line-height: 1.55; max-width: 56ch; }
-
-.ctaRow{ display:flex; gap: 12px; margin-top: 18px; flex-wrap: wrap; }
-.btn{
-  display:inline-flex;
-  align-items:center;
-  justify-content:center;
-  gap: 8px;
-  padding: 12px 16px;
-  border-radius: 14px;
-  border: 1px solid var(--stroke);
-  background: rgba(255,255,255,0.06);
-  color: var(--text);
-  font-weight: 750;
-  cursor:pointer;
-}
-.btn.primary{
-  border-color: rgba(124,221,192,0.25);
-  background: linear-gradient(135deg, rgba(124,221,192,0.25), rgba(122,169,255,0.18));
-}
-.btn.ghost{
-  background: transparent;
-}
-.btn:hover{ transform: translateY(-1px); }
-
-.trustRow{
-  display:flex;
-  gap: 10px;
-  margin-top: 18px;
-  flex-wrap: wrap;
-}
-.trustCard{
-  flex: 1;
-  min-width: 160px;
-  padding: 12px 12px;
-  border-radius: 16px;
-  border: 1px solid var(--stroke);
-  background: rgba(255,255,255,0.04);
-}
-.trustTitle{ font-weight: 800; }
-.trustText{ color: var(--muted); font-size: 13.5px; margin-top: 4px; }
-
-.heroVisual{ position: relative; min-height: 300px; }
-.visualCard{
-  position: relative;
-  padding: 18px 18px;
-  border-radius: 22px;
-  border: 1px solid rgba(255,255,255,0.14);
-  background: rgba(255,255,255,0.06);
-  box-shadow: var(--shadow);
-  z-index: 2;
-}
-.visualTop{ display:flex; gap: 8px; justify-content:space-between; }
-.chip{
-  padding: 8px 10px;
-  border-radius: 999px;
-  border: 1px solid rgba(124,221,192,0.24);
-  background: rgba(124,221,192,0.10);
-  font-size: 12.5px;
-  font-weight: 750;
-}
-.chip.soft{
-  border-color: rgba(122,169,255,0.25);
-  background: rgba(122,169,255,0.10);
-}
-.visualTitle{ font-weight: 900; margin-top: 14px; font-size: 18px; }
-.visualBody{ color: var(--muted); margin-top: 8px; line-height: 1.55; }
-.visualFooter{ margin-top: 18px; display:flex; justify-content:space-between; align-items:center; }
-.dots span{
-  width: 8px; height: 8px; display:inline-block; border-radius: 99px;
-  background: rgba(255,255,255,0.18);
-  margin-right: 6px;
-}
-.miniBtn{
-  padding: 10px 12px;
-  border-radius: 14px;
-  border: 1px solid var(--stroke);
-  background: rgba(255,255,255,0.06);
-  font-weight: 800;
-}
-.glow{
-  position:absolute;
-  inset: -40px -20px -30px -20px;
-  background: radial-gradient(500px 280px at 50% 40%, rgba(124,221,192,0.28), transparent 60%),
-              radial-gradient(460px 260px at 70% 60%, rgba(122,169,255,0.22), transparent 58%);
-  filter: blur(18px);
-  z-index: 1;
-}
-
-.section{ padding: 56px 0; }
-.section.alt{
-  background: rgba(255,255,255,0.03);
-  border-top: 1px solid rgba(255,255,255,0.06);
-  border-bottom: 1px solid rgba(255,255,255,0.06);
-}
-.section h2{
-  margin: 0 0 8px;
-  font-size: 30px;
-  letter-spacing: -0.3px;
-}
-.subhead{
-  margin: 0 0 22px;
-  color: var(--muted);
-  line-height: 1.6;
-}
-
-.grid3{
-  display:grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 14px;
-}
-.grid2{
-  display:grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 14px;
-}
-.card{
-  padding: 18px;
-  border-radius: var(--radius);
-  border: 1px solid var(--stroke);
-  background: rgba(255,255,255,0.04);
-}
-.card h3{ margin: 0 0 8px; font-size: 18px; }
-.card p{ margin: 0 0 10px; color: var(--muted); line-height: 1.6; }
-
-.list{ margin: 0; padding-left: 18px; color: var(--muted); }
-.list li{ margin: 6px 0; }
-
-.pdfRow{ display:flex; gap: 10px; flex-wrap: wrap; margin-top: 12px; }
-.note{
-  border-radius: 16px;
-  border: 1px solid rgba(122,169,255,0.22);
-  background: rgba(122,169,255,0.10);
-  padding: 12px;
-  color: var(--text);
-  line-height: 1.55;
-}
-
-.videoGrid{
-  display:grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 14px;
-}
-.videoCard{
-  border-radius: var(--radius);
-  border: 1px solid var(--stroke);
-  background: rgba(255,255,255,0.04);
-  overflow:hidden;
-}
-.videoFrame{
-  aspect-ratio: 16/9;
-  background: rgba(0,0,0,0.2);
-}
-.videoFrame iframe, .videoFrame video{
-  width: 100%;
-  height: 100%;
-  display:block;
-}
-.videoMeta{ padding: 14px; }
-.videoMeta h3{ margin: 0 0 6px; font-size: 16px; }
-.videoMeta p{ margin: 0; color: var(--muted); line-height: 1.55; }
-
-.faq details{
-  border-radius: 16px;
-  border: 1px solid var(--stroke);
-  background: rgba(255,255,255,0.04);
-  padding: 14px 14px;
-  margin-bottom: 10px;
-}
-.faq summary{
-  cursor:pointer;
-  font-weight: 800;
-}
-.faq p{ color: var(--muted); line-height: 1.6; margin: 10px 0 0; }
-
-.legalLinks{ display:flex; flex-direction:column; gap: 10px; }
-.legalLinks a{ color: var(--accent); font-weight: 750; }
-.fineprint{ color: var(--faint); font-size: 13px; line-height: 1.6; }
-
-.footer{
-  padding: 26px 0 40px;
-  border-top: 1px solid rgba(255,255,255,0.08);
-}
-.footerInner{
-  display:flex;
-  justify-content:space-between;
-  align-items:flex-start;
-  gap: 12px;
-  flex-wrap: wrap;
-}
-.footerBrand{ font-weight: 900; }
-.footerFine{ color: var(--faint); margin-top: 6px; font-size: 13px; }
-.footerLinks{ display:flex; gap: 14px; align-items:center; }
-.footerLinks a{ color: var(--muted); font-weight: 750; }
-.footerLinks a:hover{ color: var(--text); }
-
-.modalOverlay{
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,0.6);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  padding: 18px;
-  z-index: 100;
-}
-.modalOverlay.open{ display:flex; }
-.modal{
-  width: min(720px, 100%);
-  border-radius: 22px;
-  border: 1px solid rgba(255,255,255,0.16);
-  background: rgba(18, 24, 36, 0.92);
-  backdrop-filter: blur(16px);
-  box-shadow: var(--shadow);
-  overflow:hidden;
-}
-.modalHeader{
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding: 14px 16px;
-  border-bottom: 1px solid rgba(255,255,255,0.10);
-}
-.modalHeader h3{ margin: 0; }
-.iconBtn{
-  background: transparent;
-  border: 1px solid rgba(255,255,255,0.14);
-  color: var(--text);
-  border-radius: 12pxще
-  ;
-  padding: 8px 10px;
-  cursor:pointer;
-}
-.modalBody{ padding: 16px; }
-.modalBody h4{ margin: 14px 0 6px; }
-.modalBody p{ margin: 0 0 10px; color: var(--muted); line-height: 1.6; }
-.callout{
-  border-radius: 16px;
-  border: 1px solid rgba(124,221,192,0.22);
-  background: rgba(124,221,192,0.10);
-  padding: 12px;
-  color: var(--text);
-  line-height: 1.55;
-}
-.modalFooter{
-  padding: 14px 16px;
-  display:flex;
-  justify-content:flex-end;
-  gap: 10px;
-  border-top: 1px solid rgba(255,255,255,0.10);
-}
-
-@media (max-width: 980px){
-  .heroInner{ grid-template-columns: 1fr; }
-  .videoGrid{ grid-template-columns: 1fr; }
-  .grid3{ grid-template-columns: 1fr; }
-  .grid2{ grid-template-columns: 1fr; }
-  .navlinks{ display:none; }
-  .menuBtn{ display:inline-flex; }
-}
-const yearEl = document.getElementById("year");
-if (yearEl) yearEl.textContent = new Date().getFullYear();
-
-const modal = document.getElementById("disclaimerModal");
-const cookieModal = document.getElementById("cookieModal");
-
-function openModal(m) {
-  if (!m) return;
-  m.classList.add("open");
-  m.setAttribute("aria-hidden", "false");
-  document.body.style.overflow = "hidden";
-}
-
-function closeModal(m) {
-  if (!m) return;
-  m.classList.remove("open");
-  m.setAttribute("aria-hidden", "true");
-  document.body.style.overflow = "";
-}
-
-document.getElementById("openDisclaimer")?.addEventListener("click", () => openModal(modal));
-document.getElementById("openDisclaimer2")?.addEventListener("click", () => openModal(modal));
-document.getElementById("openDisclaimer3")?.addEventListener("click", () => openModal(modal));
-document.getElementById("closeDisclaimer")?.addEventListener("click", () => closeModal(modal));
-document.getElementById("closeDisclaimer2")?.addEventListener("click", () => closeModal(modal));
-
-document.getElementById("openCookie")?.addEventListener("click", () => openModal(cookieModal));
-document.getElementById("closeCookie")?.addEventListener("click", () => closeModal(cookieModal));
-document.getElementById("closeCookie2")?.addEventListener("click", () => closeModal(cookieModal));
-
-modal?.addEventListener("click", (e) => {
-  if (e.target === modal) closeModal(modal);
-});
-cookieModal?.addEventListener("click", (e) => {
-  if (e.target === cookieModal) closeModal(cookieModal);
-});
-
-document.addEventListener("keydown", (e) => {
-  if (e.key === "Escape") {
-    closeModal(modal);
-    closeModal(cookieModal);
-  }
-});
-
-// Mobile menu
-const menuBtn = document.getElementById("menuBtn");
-const mobileMenu = document.getElementById("mobileMenu");
-
-menuBtn?.addEventListener("click", () => {
-  const showing = mobileMenu.style.display === "block";
-  mobileMenu.style.display = showing ? "none" : "block";
-});
-
-mobileMenu?.querySelectorAll("a").forEach(a => {
-  a.addEventListener("click", () => {
-    mobileMenu.style.display = "none";
-  });
-});
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Privacy Policy — The Canine Connection</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header class="nav">
-    <div class="brand">
-      <div class="logo">🐾</div>
-      <div>
-        <div class="brandName">The Canine Connection</div>
-        <div class="brandTag">Privacy Policy</div>
-      </div>
-    </div>
-    <nav class="navlinks">
-      <a href="index.html" class="pill">Back to site</a>
-    </nav>
-  </header>
-
-  <section class="section">
-    <div class="container">
-      <h2>Privacy Policy (Template)</h2>
-      <p class="subhead">Last updated: <strong>ADD DATE</strong></p>
-
-      <div class="card">
-        <h3>Information We Collect</h3>
-        <p>
-          This website may collect information you provide (such as an email if you contact us) and
-          basic usage data depending on hosting/analytics settings.
-        </p>
-
-        <h3>How We Use Information</h3>
-        <p>
-          We use information to respond to inquiries, improve content, and operate the website.
-        </p>
-
-        <h3>Cookies & Analytics</h3>
-        <p>
-          Cookies may be used for basic functionality and analytics depending on tools you enable.
-          You can disable analytics or add consent tools if required.
-        </p>
-
-        <h3>Third Parties</h3>
-        <p>
-          If you embed videos (YouTube/Vimeo), those providers may collect data per their policies.
-        </p>
-
-        <h3>Contact</h3>
-        <p>
-          Privacy contact: <strong>ADD CONTACT EMAIL</strong>
-        </p>
-
-        <p class="fineprint">
-          This is a general template for informational purposes and is not legal advice.
-          If you collect emails, sell services, or target users in regulated regions, get legal review.
-        </p>
-      </div>
-    </div>
-  </section>
-</body>
-</html>
-
